@@ -10,6 +10,7 @@
 6. No need to check if playqueue song exists in MPD dir whe performing a
    'locate in library'. Its possible that the configured MPD dir does not
    exist - but 'locate in library' should still work.
+7. Implement a basic spinner widgets for item views in Qt-only builds.
 
 0.7.1
 -----
